--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin: auto;
+  width: 50%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 3vh;
+  font-size: 2rem;
+  margin-top: 5vh;
 }
 
-.App-link {
-  color: #61dafb;
+.form-transaction {
+  margin: auto;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    align-content: space-around;
+    flex-wrap: nowrap;
+    padding: 2em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.trans-input {
+  padding-bottom: 0.5vw
 }
+
+.div-table {
+  display: flex;
+  justify-content: center;
+}
+
+.trans-header {
+  font-size: 3rem;
+}
+
+.row-ordering {
+  display: flex;
+  align-items: center;
+}
+
+
